fix(popover): added min width equal to max width to have one size popover
Fixes issue where title and close button overlaps when there is to litle content, and title is to
long

--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -5119,6 +5119,7 @@ input:focus {
   pointer-events: all;
   position: absolute;
   width: max-content;
+  min-width: 400px;
   max-width: 400px;
   padding: 24px;
   background-color: #fff;
@@ -5139,6 +5140,7 @@ input:focus {
 }
 @media (max-width: 767px) {
   .e-popover__content {
+    min-width: 300px;
     max-width: 300px;
   }
 }
